@@ -11,9 +11,11 @@ php_value memory_limit 128M
 <IfModule mod_rewrite.c>
 RewriteEngine on
 RewriteBase /cameralife/
-RewriteRule ^photos/(\d+) photo.php?id=$1&%{QUERY_STRING}
+RewriteRule ^photos/(\d+)$ photo.php?id=$1&%{QUERY_STRING}
 RewriteRule ^photos/([^/]+)/(\d+)-(\d+)\. media.php?format=$1&id=$2&ver=$3
 RewriteRule ^photos/([^/]+)/(\d+)\. media.php?format=$1&id=$2&ver=%{QUERY_STRING}
+#RewriteRule ^photos/(\d+)\.[^?]+?scale=([^&]+)&ver=(\d+)$ media.php?id=$1&scale=$2&ver=$3
+RewriteRule ^photos/(\d+)\.([^?]+)$ media.php?id=$1&%{QUERY_STRING}
 RewriteRule ^folders/(.*) folder.php?path=$1&%{QUERY_STRING}
 RewriteRule ^albums/(\d+) album.php?id=$1&%{QUERY_STRING}
 RewriteRule ^topics/(.+) topic.php?name=$1&%{QUERY_STRING}
