@@ -1,6 +1,6 @@
 *
 * Camera Life
-* Version 2.6.2 - 2008-11-10
+* Version 2.6 - 2008-11-10
 * http://fdcl.sourceforge.net
 *
 * Copyright (C) 2001-2008 Will Entriken "Full Decent" <cameralife AT phor.net>
