@@ -1,53 +1,8 @@
-!=need to do, *=todo, ?=waste of time
-
-==================================
+================================== 
 BLOCKERS for the 2.6.3 release
 ----------------------------------
 
-! FIX THEME FOR MSIE!
-! look at bugs on sf.net ADD LINK IN THIS FILE
-! folder sorting based on time photo taken !!!!
-
-Also, I had a bit of a
-struggle getting photos to upload.  Seems that the /images/photos/upload/
-directory did't get created during the install process and the mkdir
-function couldn't create the /images/photos/upload/admin directory that it
-wanted to use.  I finally tracked it all down and created the directories
-manually and everything is good.  Not sure if that's a bug or not.  Looks
-like great software.  Thanks in advance for your help.
-
-I'd read Lee Schlesinger's piece on Camera Life & thought I'd drop by. While there, I tried posting a comment and got the error message below. Anyway, good-looking project and it feels /snappy/ compared to our instance of coppermine.
-thx, -Craig
-Duplicate entry '0' for key 1 SQL: INSERT INTO comments SET photo_id = '664', user_ip = '71.135.37.43', comment = 'Spooky. Saw the same Batman 2 years earlier. Scared the kids.', date = '2010-02-09'
-
-1) support multiple picutre sizes... I know that there is 480px ! 360px one that shows when you view a page... and the 'original' size that goes with the picutre... but does it support other image sizes? I have a big monitor and fast connection and want to see pics at something like 1024x768. My parents have a slower connection so smaller pics is what they want.
-Is there a way to 1) have multiple image sizes and 2) let the user select which size they want to use when they are looking at the pics?
-Also... does the code support auto-rotation based on the exif data from the picutre? I see a bunch of pics that appear to be sideways... do I have to id each one and manually rotate it or is there a scrip option that will do that automatically?
-Thanks -jack snodgrass
-
-If I load:
-http://test.jacksnodgrass.com/cameralife/photo.php?id=396
-I see a web page with a pic.... 480px ! 360px
-I'd like to see that pic at 1024x768 and when I click on the 'next' or 'prev' image, I see that page: http://test.jacksnodgrass.com/cameralife/photo.php?id=395&referer= load the next pic at 1024x768 too....
-I guess on the 'first' one, I'd have to set a 'user' preference... maybe a cookie.... so that on the next page... and the next time I come back to the site... it 'knows' that I want to see bigger ( 1024x768 ) size pics. The first time user would see
-the pic at the standard 480x360 size... but if they decided that they wanted to see bigger picks, the would select a button that would give them the choice of something bigger for each new pic that they see.
-
-I have a web server ( used to display web pages ) and a compile sever ( a lot faster than the web server )
-I'd like to be able to do all re-size, thumbmail, etc transitions on a separate box and upload them to the web server... actually..... I have my web pages NFS mounted ( the web server is a vmware box ).
-jack
-http://fdcl.sourceforge.net/wiki/index.php/ThumbnailServer
-
-You can ask for a table prefix ( good thing ) but if you try and install a 2nd copy of cameralife and use a different prefix ( I have MAIN and I want to have TEST ) the script won't install the 2nd set of tables using the new TEST prefix. I'd like to have one db ( cameralife ) and have a MAIN and TEST set of tables.
-jack
-
- have 2 boxes with fedora 10 on them. I installed cameralife on my first box ( my web server ) and everything is fine.
-I wanted to test some things on my text box so I installed it there.... the 'icons' don't show up on the 2nd box. I get the 'alt' tags. My log shows: [Tue Jun 02 04:02:47 2009] [error] [client 192.168.1.2] File does not exist: /opt/www/cameralife/modules/ iconset/cartoonic/search, referer: http://q6600/cameralife/search.php?page=p&sort=rand&q=
-... it's not using the .gif, .svg, or .jpg prefix... there are multiple versions of the icons ( search.gif, search.svg, etc ) but the request is not asking for any of them and it's not returning the icon image.
-What part of the cameralife code decides what type of icon ( .gif or .svg ) to send... and why does it work on on Fedora 10 box and not another?
-jack
-
-Ah, this looks like a content negotiation situation. I assume you are using apache. The .htaccess file or httpd.conf, or whatever they call that file these days, needs to have Options +Multiviews. I believe that the setup/index.php should have given you a warning about this, no?
-I don't know why this isn't default and will look into removing this assumption from the code.
+FIX THEME FOR MSIE!
 
 first of all merry xmas and thanks a lot for your great application.
 I have discovered problems with the Amazon S3 photo storage. when I try to "rescan" photos after I have setup my AWS account in cameralife I get the following error:
@@ -86,6 +41,29 @@ COMPARE TO FLICKR AND GOOGLE PICASA
 
 UPDATE POSTAGE RATE -- TELL CHRIS
 
+http://gallery.menalto.com/wiki/Most_Requested_Features
+
+http://fdcl.sourceforge.net/wiki/index.php?title=Special:RecentChanges&feed=rss
+
+http://sourceforge.net/tracker/index.php?func=detail&aid=2468857&group_id=70910&atid=529445
+
+--php
+$if_modified_since = preg_replace('/;.*$/', '', $HTTP_IF_MODIFIED_SINCE);
+
+$mtime = filemtime($SCRIPT_FILENAME);
+$gmdate_mod = gmdate('D, d M Y H:i:s', $mtime) . ' GMT';
+
+if ($if_modified_since == $gmdate_mod) {
+    header("HTTP/1.0 304 Not Modified");
+    exit;
+}
+header("Last-Modified: $gmdate_mod");
+--
+
+http://fdcl.sourceforge.net/wiki/index.php?title=Special:RecentChanges&feed=rss
+
+http://sourceforge.net/tracker/?group_id=70910&atid=529445
+
 ===================
 RELEASE HOWTO
 -------------------
@@ -97,6 +75,8 @@ RELEASE HOWTO
   harden against malicio us user inputs and sql inj ection -- you like that anti-grep obfuscation?
   and uploading non-images
   #vim setup/install.mysql
+  Is /images/photos/upload/ being created?
+  Test with installing using 2 different table prefixes
 
 -------------------
 AUTOMATED RELEASE
@@ -140,6 +120,10 @@ popd
 TODO FOR 2.6.4 RELEASE
 ----------------------------
 
+Update website to show off features better. 
+
+! folder sorting based on time photo taken !!!!
+remove content negotiation assumption from iconsets
 ! Video support
 ! Search results in theme with Photos AND Folders AND Albums
 ! create help pages at http://fdcl.sourceforge.net/wiki/index.php/Main_Page and link to them from inside CL
@@ -168,7 +152,9 @@ TODO FOR 2.6.4 RELEASE
 TODO AFTER 2.6.4 RELEASE
 ---------------------------
 
+* Switch to Google Code hosting
 ! Theme bounty! iPod Nano / shuffle?
+Consistently use user-chosen photo preview size - Jack Snodgrass
    - Theme developer assistant
    - Pre populates variables with example data
    - Does not require CL install
